# Autonomous_shopping_cart

./: README.markdown  README.md
barcode_reader/: README.md  default_config.json  detector.py  imageset.py  test.py
barcode_reader/images/: imageset.json
robot_arm/: CMakeLists.txt  README.markdown  package.xml
robot_arm/config/: joint_names_robot_arm.yaml
robot_arm/launch/: display.launch
robot_arm/meshes/: bottom_arm.STL  finger1.STL  grabber_arm.STL  grabber_joint.STL  upper_arm.STL
robot_arm/urdf/: robot_arm.csv  robot_arm.urdf
robot_arm_gazebo/: CMakeLists.txt  README.markdown  package.xml
robot_arm_gazebo/launch/: empty_world.launch  robot_arm.launch  robot_arm_spawn.launch
robot_arm_gazebo/models/: base_link.STL  bottom_joint.STL  finger2.STL  finger3.STL  grabber_hand.STL  grabber_piston.STL  middle_arm.STL  middle_joint.STL  robot_arm_gazebo.sdf  robot_arm_gazebo.urdf  upper_joint.STL
robot_arm_gazebo/worlds/: empty.world  robotarm.world
robot_arm_moveit_config/: .setup_assistant  README.markdown  package.xml
robot_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot_arm.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
robot_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
robot_arm_rosbridge/: CMakeLists.txt  README.markdown  package.xml
robot_arm_rosbridge/src/: publish_robot_arm_status.cpp  web_interface.html
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/launch/: display.launch
src/robot_arm/urdf/: arm.urdf
user_interface/: CMakeLists.txt  README.markdown  package.xml
user_interface/src/: get_joints_states.cpp  get_trajectory_status.cpp  send_position_to_moveit.cpp
