<package>
  <name>robot_arm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot_arm</p>
    <p>This package contains configuration data, 3D models and launch files
for robot_arm robot</p>
  </description>
  <author email="lheritier.alexis@gmail.com">Alexis Lheritier</author>
  <maintainer email="lheritier.alexis@gmail.com" />
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
