<?xml version="1.0"?>
<package format="2">
  <name>robot_arm_rosbridge</name>
  <version>0.0.0</version>
  <description>The robot_arm_rosbridge package</description>

  <author email="alexis.lheritier@u-bordeaux.fr">Alexis Lheritier</author>
  <maintainer email="alexis.lheritier@u-bordeaux.fr">Alexis Lheritier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <exec_depend>rospy</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>


</package>
