<?xml version="1.0"?>
<package format="2">
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>The robot_arm_moveit_c_interface package</description>

  <author email="alexis.lheritier@u-bordeaux.fr">Alexis Lheritier</author>
  <maintainer email="alexis.lheritier@u-bordeaux.fr">Alexis Lheritier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface </build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend> moveit_ros_move_group</build_depend>

  <exec_depend>rospy</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

</package>
