<?xml version="1.0"?>
<package format="2">
  <name>robot_arm</name>
  <version>0.0.0</version>
  <description>The robot arm package</description>

  <maintainer email="alexis.lheritier@u-bordeaux.fr">Alexis Lheritier</maintainer>

  <license>TODO</license>

  <author email="alexis.lheritier@u-bordeaux.fr">Alexis Lheritier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
